12/27/2012 - version 0.99.23:
   - Conversion for the 1.1 API
   - Multiple functions (e.g. publicTimeline()) were removed due to
     the corresponding functionality being removed from the API
   - The trend system has been completely rewritten
   - The rate limit system has been completely rewritten
   - The friendships() function has been added
2/20/2012 - version 0.99.19:
   - Fixed a bug in lookupUsers where screen names that had upper
     case characters in them weren't being properly populated
   - Switched (temporarily) to rjson in order to properly handle unicode
     text data from Twitter
   - Changed DM sender_id and recipient_id to be using the corresponding
     id_str