@@ -1,7 +1,7 @@
 Package: twitteR
 Title: R based Twitter client
 Description: Provides an interface to the Twitter web API
-Version: 0.99.23
+Version: 0.99.24
 Author: Jeff Gentry <geoffjentry@gmail.com>
 Maintainer: Jeff Gentry <geoffjentry@gmail.com>
 Depends: R (>= 2.12.0), RCurl, rjson, methods
